fix: corrigido overlay e z-index do menu hamburguer

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -75,6 +75,7 @@
 }
 .navbar__closed__menu__hamburguer {
   display: none;
+  z-index: 4;
 }
 @media (max-width: 768px) {
   .navbar__closed__menu__hamburguer {
@@ -338,7 +339,7 @@
   }
 }
 .buscarProdutos__container .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
